server part down

--- a/readme
+++ b/readme
@@ -1,11 +1,11 @@
-Server keystore:
+Generate server keystore:
 keytool -genkey -v -alias ssl-chatroom-server -keyalg RSA -keystore ./server_ks -dname "CN=localhost,OU=cn,O=cn,L=cn,ST=cn,C=cn" -storepass server456 -keypass def456
 
-Client keystore:
+Generate slient keystore:
 keytool -genkey -v -alias ssl-chatroom-client -keyalg RSA -keystore ./client_ks -dname "CN=localhost,OU=cn,O=cn,L=cn,ST=cn,C=cn" -storepass client789 -keypass abc789
 
 Export server certificate:
-keytool -export -alias ssl-chatroom-server -keystore ./server_ks -file server_key.cer
+keytool -export -alias ssl-chatroom-server -storepass server456 -keystore ./server_ks -file server_key.cer
 
 Import server certificate into client keystore:
-keytool -import -trustcacerts -alias ssl-chatroom-server -file ./server_key.cer -keystore ./client_ks
+keytool -import -trustcacerts -alias ssl-chatroom-server -storepass client789 -file ./server_key.cer -keystore ./client_ks
