--- a/readme
+++ b/readme
@@ -1,7 +1,9 @@
+A very secure chatroom.
+
 Generate server keystore:
 keytool -genkey -v -alias ssl-chatroom-server -keyalg RSA -keystore ./server_ks -dname "CN=localhost,OU=cn,O=cn,L=cn,ST=cn,C=cn" -storepass server456 -keypass def456
 
-Generate slient keystore:
+Generate client keystore:
 keytool -genkey -v -alias ssl-chatroom-client -keyalg RSA -keystore ./client_ks -dname "CN=localhost,OU=cn,O=cn,L=cn,ST=cn,C=cn" -storepass client789 -keypass abc789
 
 Export server certificate:
